--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,3 +9,16 @@ html::-webkit-scrollbar {
 html {
   scrollbar-width: none;
 }
+
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  background-color: #dc2626;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after,
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  color: #f13024;
+}
