--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,5 @@ html {
 .swiper-button-prev:after,
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
-  color: #f13024;
+  color: #dc2626;
 }
