global colors start

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,14 +13,14 @@ html {
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets
   .swiper-pagination-bullet {
-  background-color: #dc2626;
+  background-color: #ef4444;
 }
 
 .swiper-button-next:after,
 .swiper-button-prev:after,
 .swiper-button-next:after,
 .swiper-rtl .swiper-button-prev:after {
-  color: #dc2626;
+  color: #ef4444;
 }
 
 .btn,
